--- a/php/src/WebScrapping/origin.html
+++ b/php/src/WebScrapping/origin.html
@@ -263,6 +263,8 @@
 </div>
 </div>
 
+<a href="gerarPlanilha.php"><button>Gerar Planilha</button></a>
+
     </div>
 
     <div class="col-sm-12 col-md-8 col-lg-8 col-md-pull-4 col-lg-pull-4">
